--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -74,6 +74,10 @@
 }
 
 @media screen and (min-width: 768px) {
+	.header {
+		padding: 5px 25px;
+	}
+
 	.logo {
 		max-width: 150px;
 	}
